# blackscholestrading

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  analytics.py  app copy.py  app.py  data_service.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_pinned.txt  ui_components.py
.github/workflows/: ci.yml
.hypothesis/constants/: 166753f80177b860  1ae0e0dcee0f4784  28627735f1d51e62  28c7a764003bd2c1  43e36cc95c210777  92ec4ba7385f81b2  9f10bbcc775f95ca  (+3 more)
.streamlit/: config.toml
api/: data_service.py  index.py  pyproject.toml  requirements.txt  vercel.json
api/app/: main.py
api/app/routers/: backtest.py  market.py  pricing.py
api/app/schemas/: backtest.py  market.py  pricing.py
api/app/services/: backtest_service.py  market_service.py  pricing_service.py  volatility_service.py
api/data/: __init__.py  mock_provider.py  provider.py  yahoo_provider.py
api/models/: __init__.py  engine.py  numerical.py  simulation.py
api/strategies/: __init__.py  multi_leg.py
api/tests/: test_analytics.py  test_api.py  test_backtest_service.py  test_convergence.py  test_engine.py
api/utils/: __init__.py  constants.py  numba_compat.py
benchmarks/: perf_test.py
data/: __init__.py  mock_provider.py  provider.py  yahoo_provider.py
models/: __init__.py  black_scholes.py  engine.py  simulation.py
strategies/: __init__.py  backtest.py
tests/: test_advanced_models.py  test_analytics.py  test_properties.py
utils/: __init__.py  constants.py  numba_compat.py
web/: next.config.ts  package-lock.json  package.json
(+70 files in other folders)
