[project]
name = "blackscholes-api"
version = "1.0.2"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "numpy",
  "scipy",
  "pandas",
  "yfinance",
  "pyarrow",
]

[tool.pytest.ini_options]
pythonpath = ["..", "."]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "."
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
